--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+jei_version = 6.0.3.15
+mc_version = 1.15.2
