Spanish Translations Thanks to BlackJasmine

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ displayName="TerrariaMod"
 updateJSONURL="http://myurl.me/"
 displayURL="http://example.com/"
 logoFile="examplemod.png"
-credits="Thanks for this example mod goes to Java"
+credits="BlackJasmine - Spanish Translations"
 authors="Ryorama, Realz, PutoPug, HamburgurBoi"
 description='''
 A port of the game Terraria into Minecraft!
