--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 	// You may need to force-disable transitiveness on them.
 }
 
+minecraft {
+	accessWidener = file("src/main/resources/terrariamod.accesswidener")
+}
+
 processResources {
 	inputs.property "version", project.version
 
