--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,17 @@ dependencies {
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
 	
-	implementation files('libs/LibGui.jar')
+}
+
+repositories {
+    maven {
+        name = "CottonMC"
+        url = "https://server.bbkr.space/artifactory/libs-release"
+    }
+}
+
+dependencies {
+    modImplementation include("io.github.cottonmc:LibGui:4.0.0-alpha.1+21w11a")
 }
 
 minecraft {
