--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
+	# Look At https://fabricmc.net/use
 	minecraft_version=21w15a
 	yarn_mappings=21w15a+build.16
 	loader_version=0.11.3
@@ -13,5 +12,5 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = terrariamod
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+	# Maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 	fabric_version=0.33.0+1.17
