--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,9 +14,9 @@ issueTrackerURL="http://my.issue.tracker/" #optional
 # The modid of the mod
 modId="trewrite" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.1" #mandatory
+version="1.0" #mandatory
  # A display name for the mod
-displayName="Terrariamod" #mandatory
+displayName="Trewrite" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
 updateJSONURL="http://myurl.me/" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
@@ -26,10 +26,11 @@ logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors="Ryorama, Kelvin" #optional
+authors="Love, Cheese and small house plants" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-A port of the game Terraria in Minecraft!
+My own interpretation of the Terraria lore brought into a 3D world in a community-run Minecraft mod
+(with a bit of extra stuff added in for fun)
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 
