--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-	id 'fabric-loom' version '0.6-SNAPSHOT'
+	id 'fabric-loom' version '0.8-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -14,10 +14,12 @@ repositories {
 }
 
 dependencies {
-  	minecraft "com.mojang:minecraft:21w15a"
-    mappings "net.fabricmc:yarn:21w15a+build.16:v2"
-    modImplementation "net.fabricmc:fabric-loader:0.11.3"
-    modImplementation "net.fabricmc.fabric-api:fabric-api:0.33.0+1.17"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
 	compile files('libs/geckolib-fabric-1.17-3.0.20-dev.jar')
 	implementation 'javax.vecmath:vecmath:1.5.2'
 }
@@ -36,10 +38,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
-	def targetVersion = 8
-	if (JavaVersion.current().isJava9Compatible()) {
-		 it.options.release = targetVersion
-	}
+	it.options.release = 16
 }
 
 java {
