--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
+# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# Look At https://fabricmc.net/use
-	minecraft_version=21w15a
-	yarn_mappings=21w15a+build.16
-	loader_version=0.11.3
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.14
+	loader_version=0.11.6
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -12,5 +13,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = terrariamod
 
 # Dependencies
-	# Maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.33.0+1.17
+	fabric_version=0.37.0+1.17
