--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
+	maven {
+		name = 'Ladysnake Mods'
+		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		content {
+			includeGroup 'io.github.ladysnake'
+			includeGroupByRegex 'io\\.github\\.onyxstudios.*'
+		}
+	}
 }
 
 dependencies {
@@ -36,6 +44,9 @@ dependencies {
 	include modImplementation('software.bernie.geckolib:geckolib-fabric-1.17:3.0.12:dev')
 	modImplementation "dev.emi:trinkets:3.0.4"
 	implementation 'javax.vecmath:vecmath:1.5.2'
+	modImplementation "io.github.ladysnake:satin:${satin_version}"
+	// Include Satin as a Jar-in-Jar dependency (optional)
+	include "io.github.ladysnake:satin:${satin_version}"
 }
 
 processResources {
