--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,12 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.14
+loader_version=0.11.6
 
-# Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.ryorama
-	archives_base_name = terrariamod
+mod_version = 1.0.0
+maven_group = com.ryorama
+archives_base_name = terrariamod
 
-# Dependencies
-	fabric_version=0.37.0+1.17
+fabric_version=0.37.0+1.17
+satin_version = 1.6.4
