--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+		id 'fabric-loom' version '0.8-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -15,6 +15,7 @@ loom {
 }
 
 repositories {
+	maven { url 'https://jitpack.io' }
 	maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 	maven {
 		name = "TerraformersMC"
@@ -41,14 +42,13 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+	modImplementation "com.github.glisco03:owo-lib:${project.owo_version}"
+	include "com.github.glisco03:owo-lib:${project.owo_version}"
+
 	include modImplementation('software.bernie.geckolib:geckolib-fabric-1.17:3.0.12:dev')
 	modImplementation "dev.emi:trinkets:3.0.4"
 	implementation 'javax.vecmath:vecmath:1.5.2'
 	modImplementation "io.github.ladysnake:satin:${satin_version}"
-
-	include "io.github.ladysnake:satin:${satin_version}"
-	include "software.bernie.geckolib:geckolib-fabric-1.17:3.0.12:dev"
-	include "dev.emi:trinkets:3.0.4"
 
 }
 
