Bugfixes and changes

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,10 @@ dependencies {
 	modImplementation "dev.emi:trinkets:3.0.4"
 	implementation 'javax.vecmath:vecmath:1.5.2'
 	modImplementation "io.github.ladysnake:satin:${satin_version}"
-	modImplementation "de.keksuccino.fancymenu:fancymenu:2.3.6"
+
+	implementation ("de.keksuccino:fancymenu:2.3.6") {
+		exclude group: "de.keksuccino"
+	}
 }
 
 processResources {
