--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
 loom {
-	accessWidener = file("src/main/resources/terrariamod.accesswidener")
+	accessWidenerPath = file("src/main/resources/terrariamod.accesswidener")
 }
 
 repositories {
@@ -41,8 +41,8 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	include modImplementation('software.bernie.geckolib:geckolib-fabric-1.17:3.0.12:dev')
-	modImplementation "dev.emi:trinkets:3.0.4"
+	include modImplementation('software.bernie.geckolib:geckolib-fabric-1.18:3.0.22')
+	modImplementation "dev.emi:trinkets:3.1.0"
 	implementation 'javax.vecmath:vecmath:1.5.2'
 	modImplementation "io.github.ladysnake:satin:${satin_version}"
 
@@ -62,7 +62,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
-	it.options.release = 16
+	it.options.release = 17
 }
 
 java {
