--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "com.ryorama:ryolib:1.0.1"
+	modImplementation "com.ryorama:ryolib:${ryolib_version}"
 
 	include modImplementation('software.bernie.geckolib:geckolib-fabric-1.18:3.0.22')
 	modImplementation "dev.emi:trinkets:3.1.0"
