--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ fabric_version = 0.48.0+1.18.2
 geckolib_version = 3.0.36
 satin_version = 1.7.2
 trinkets_version = 3.3.0
+
+architectury_version=
+forge_version=40.1.20
