--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ geckolib_version = 3.0.36
 satin_version = 1.7.2
 trinkets_version = 3.3.0
 
-architectury_version=
+architectury_version=4.4.60
 forge_version=40.1.20
