--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.2
-loader_version=0.13.3
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.8
+loader_version=0.14.9
 
 mod_version = 1.0.8
 maven_group = com.ryorama
 archives_base_name = terrariamod
 
-fabric_version = 0.48.0+1.18.2
-geckolib_version = 3.0.36
+fabric_version=0.60.0+1.19.2
+geckolib_version = 3.1.16
 satin_version = 1.7.2
-trinkets_version = 3.3.0
-cloth_version = 6.2.62
-modmenu_version = 3.2.3
-libgui_version = 5.4.2+1.18.2
+trinkets_version = 3.4.0
+cloth_version = 8.0.75
+modmenu_version = 4.0.6
+libgui_version = 6.0.1+1.19
+structureplacerapi_version = 1.0.0
