--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	//modImplementation "com.ryorama:ryolib:${ryolib_version}"
+	modImplementation "com.ryorama.ryolib:1.19:${ryolib_version}"
 
 	modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
 
