--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ cloth_version = 8.0.75
 modmenu_version = 4.0.6
 libgui_version = 6.0.1+1.19
 structureplacerapi_version = 1.0.0
+ryolib_version = 1.1
