--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ repositories {
 			includeGroup "maven.modrinth"
 		}
 	}
+	maven {
+		url "https://maven.firstdarkdev.xyz/snapshots"
+	}
 }
 
 dependencies {
@@ -55,16 +58,17 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "com.ryorama.ryolib:1.19:${ryolib_version}"
+	//modImplementation "com.ryorama.ryolib:1.19:${ryolib_version}"
 
 	modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
 
+	include modImplementation("com.lowdragmc.shimmer:Shimmer-fabric:${minecraft_version}-${shimmer_version}")
 	include modImplementation("software.bernie.geckolib:geckolib-fabric-1.19:${geckolib_version}")
 	include modImplementation("dev.emi:trinkets:${trinkets_version}")
 	implementation 'javax.vecmath:vecmath:1.5.2'
 
 
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_version}") {
+	include modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
