--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ modmenu_version = 4.0.6
 libgui_version = 6.0.1+1.19
 structureplacerapi_version = 1.0.0
 ryolib_version = 1.1
+shimmer_version = 0.1.14
