--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 	}
 	maven {
 		name = "TerraformersMC"
-		url = "https://maven.terraformersmc.com/"
+		url "https://maven.terraformersmc.com/releases/"
 	}
 	maven {
 		name = "Ladysnake Libs"
