--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,11 @@ maven_group = com.ryorama
 archives_base_name = terrariamod
 
 fabric_version=0.75.1+1.19.3
-geckolib_version = 3.1.16
+geckolib_version = 4.0.4
 satin_version = 1.7.2
 trinkets_version = 3.5.1
-cloth_version = 8.0.75
-modmenu_version = 4.0.6
+cloth_version = 9.0.94
+modmenu_version = 5.1.0-beta.4
 libgui_version = 6.0.1+1.19
 structureplacerapi_version = 1.0.0
 ryolib_version = 1.1
