--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,20 @@
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
+
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
 loader_version=0.14.17
 
 mod_version = 1.0.8
 maven_group = com.ryorama
 archives_base_name = terrariamod
 
-fabric_version=0.75.1+1.19.3
-geckolib_version = 4.0.4
+fabric_version=0.76.0+1.19.4
+geckolib_version = 4.1.0
 satin_version = 1.7.2
-trinkets_version = 3.5.1
-cloth_version = 9.0.94
-modmenu_version = 5.1.0-beta.4
+trinkets_version = 3.6.0
+cloth_version = 10.0.96
+modmenu_version = 6.1.0-rc.4
 libgui_version = 6.0.1+1.19
 structureplacerapi_version = 1.0.0
 ryolib_version = 1.1
