--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,24 @@
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx4098M
 
-minecraft_version=1.19.4
+minecraft_version=1.20.1
 enabled_platforms=quilt,fabric,forge
 
 archives_base_name=terrariamod
 mod_version=1.0.0
 maven_group=com.ryorama.terrariamod
 
-architectury_version=8.1.79
+architectury_version=9.0.8
 
-fabric_loader_version=0.14.9
-yarn_mappings=1.19.4+build.2
-fabric_api_version=0.78.0+1.19.4
+fabric_loader_version=0.14.21
+yarn_mappings=1.20.1+build.2
+fabric_api_version=0.83.1+1.20.1
 
-forge_version=1.19.4-45.0.43
+forge_version=1.20.1-47.0.6
 
-quilt_loader_version=0.17.2-beta.3
-quilt_fabric_api_version=4.0.0-beta.7+0.59.0-1.19.2
+quilt_loader_version=0.19.2-beta.2
+quilt_fabric_api_version=7.0.3+0.83.1-1.20.1
 
-geckolib_version_fabric=4.1.3
-geckolib_version_quilt=4.1.3
-geckolib_version_forge=4.1.3
-cloth_config_version = 10.0.96
+geckolib_version_fabric=4.2
+geckolib_version_quilt=4.2
+geckolib_version_forge=4.2
+cloth_config_version = 11.0.99
