--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -21,7 +21,7 @@ architectury {
 
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
-    mixin.defaultRefmapName = 'terrariamod.mixin.refmap.json'
+    mixin.defaultRefmapName = 'terrariamod.mixins.refmap.json'
 }
 
 configurations {
@@ -44,7 +44,7 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionQuilt")) { transitive false }
-    modImplementation "software.bernie.geckolib:geckolib-quilt-1.19.4:${rootProject.geckolib_version_quilt}"
+    modImplementation "software.bernie.geckolib:geckolib-fabric-1.20:${rootProject.geckolib_version_quilt}"
     modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
