Re Added config and custom fluid physics

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
     compileOnly "software.bernie.geckolib:geckolib-forge-1.19.4:${geckolib_version_forge}"
+    modImplementation("me.shedaniel.cloth:cloth-config:${rootProject.cloth_config_version}")
 
 }
 
