--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     }
 
     modImplementation "dev.emi:trinkets:${trinkets_version}"
+    modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
 }
 
 processResources {
