--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ geckolib_version_fabric=4.2
 geckolib_version_quilt=4.2
 geckolib_version_forge=4.2
 cloth_config_version = 11.0.99
+fusion_version = 1.0.0
