--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -49,13 +49,13 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
-    modImplementation "software.bernie.geckolib:geckolib-fabric-1.20:${rootProject.geckolib_version_fabric}"
+    modImplementation include("software.bernie.geckolib:geckolib-fabric-1.20:${rootProject.geckolib_version_fabric}")
     modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
-    modImplementation "dev.emi:trinkets:${trinkets_version}"
-    modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
-    modImplementation "maven.modrinth:fusion-connected-textures:${rootProject.fusion_version}-fabric-mc1.20"
+    modImplementation ("dev.emi:trinkets:${trinkets_version}")
+    modImplementation include("com.terraformersmc:modmenu:${modmenu_version}")
+    modImplementation include("maven.modrinth:fusion-connected-textures:${rootProject.fusion_version}-fabric-mc1.20")
 }
 
 processResources {
